@@ -6,7 +6,7 @@ export TARGET="yd-tools/usr"
 ./cl_create.sh
 
 cd yd-tools*/
-debuild --no-tgz-check -k0x25DAD03F -pgpg2
+debuild --no-tgz-check -k0x4EA45931DE1209A8C1017902EFD4B73225DAD03F -pgpg2
 cd ..
 
 echo "Don't forget to run ./clean.sh to clean buid directory"
