@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # prepare changelog
-version=$(sed -n "/APPVER = '.*'/p" ../yandex-disk-indicator.py | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+')
+version=$(sed -n "/APPVER = '.*'/p" ../indicator.py | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+')
 #series='artful'
 series='bionic'
 #series='trusty'
