@@ -1,5 +1,8 @@
 yd-tools (1.12.0) bionic; urgency=medium
   * Changes:
-    - Split program onto 3 file to isolate daemon and GUI parts
+    - Split program into 3 files to isolate daemon and GUI parts
+    - PEP8 formatting
+    - automatic code checks through deepsource.io
+    - destroy indicators on exit
 
- -- Sly_tom_cat <slytomcat@mail.ru>  Wed, 30 Oct 2019 14:49:04 +0300
+ -- Sly_tom_cat <slytomcat@mail.ru>  Tue, 13 Apr 2021 01:24:34 +0300
